# SoftRender_CMake_MSVC

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: TheMain.cpp  main.cpp
src/app/: my_window.cpp  my_window.h
src/core/: canvas.cpp  canvas.h  render.cpp  render.h  window.cpp  window.h
src/util/: math_util.cpp  math_util.h  render.cpp  render.h
